--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -5,30 +5,28 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<meta name="p:domain_verify" content="d3f33c2fef2e4e82bcfd395624327d38" />
-	<title>Vibe LTD - Chocolate, Coffee, and Cannabis Monthly Subscription</title>
-
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta name="description" content="Personalized Monthly Coffee, Cannabis &amp; Chocolate Subscription" />
 	<meta name="keywords" content="coffee, cannabis, chocolate, subscription" />
 
+	<title>Vibe LTD - Chocolate, Coffee, and Cannabis Monthly Subscription</title>
+
 	<link rel="stylesheet" href=/css/privacy.css />
 	<link rel="stylesheet" href=/css/privacyr.css />
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 600, 700" rel="stylesheet">
 
 	<link rel="icon" type="image/png" sizes="16x16" src=/img/favicon-16x16.png>
 
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script defer type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 	<script>
-		$(document).ready(function () {
+		$(document).ready(function() {
 
 
-			$('.accordionButton').click(function () {
+			$('.accordionButton').click(function() {
 
 
 				$('.accordionButton').removeClass('on');
@@ -50,11 +48,11 @@
 
 
 
-			$('.accordionButton').mouseover(function () {
+			$('.accordionButton').mouseover(function() {
 				$(this).addClass('over');
 
 
-			}).mouseout(function () {
+			}).mouseout(function() {
 				$(this).removeClass('over');
 			});
 
@@ -65,8 +63,8 @@
 	</script>
 
 	<script>
-		$(document).ready(function () {
-			$('a[rel="relativeanchor"]').click(function () {
+		$(document).ready(function() {
+			$('a[rel="relativeanchor"]').click(function() {
 				$('html, body').animate({
 					scrollTop: $($.attr(this, 'href')).offset().top
 				}, 500);
@@ -76,9 +74,9 @@
 	</script>
 
 	<script type="text/javascript">
-		! function (e) {
+		! function(e) {
 			if (!window.pintrk) {
-				window.pintrk = function () {
+				window.pintrk = function() {
 					window.pintrk.queue.push(Array.prototype.slice.call(arguments))
 				};
 				var n = window.pintrk;
@@ -93,7 +91,7 @@
 		pintrk('load', '2617160657516');
 		pintrk('page');
 	</script>
-	
+
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
 	</noscript>
@@ -101,7 +99,27 @@
 	<script>
 		pintrk('track', 'pagevisit');
 	</script>
+
 	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js" type="text/javascript"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+	<script>
+		 
+		var config = {
+			apiKey: "AIzaSyB3NazIeORQkJsOKRIPN7c4DePpHgHKyCk",
+			authDomain: "vibe-apps.firebaseapp.com",
+			databaseURL: "https://vibe-apps.firebaseio.com",
+			projectId: "vibe-apps",
+			storageBucket: "vibe-apps.appspot.com",
+			messagingSenderId: "552217198259"
+		};
+		firebase.initializeApp(config);
+	</script>
+	<script src="/js/app.js" type="text/javascript"></script>
+	<script src="/js/user.svc.js" type="text/javascript"></script>
+	<script src="/js/account.ctrl.js" type="text/javascript"></script>
+
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
 		/>
@@ -109,7 +127,8 @@
 
 </head>
 
-<body>
+<body ng-app="vibe" ng-controller="appCtrl">
+
 
 
 
@@ -120,6 +139,8 @@
     </div>
     
     <div class="headerCol2">
+        <a href="" class="blog" ng-click="login()" ng-if="!auth.uid">Login</a>
+        <a href="" class="blog" ng-click="login()" ng-if="auth.uid">My Account</a>
         <a href="https://blog.vibeltd.co/" class="blog">Vibe Blog</a><br>
         <div class="social-header">
             <a href="http://www.facebook.com/vibeltd"><img class="fb" src=/img/vfb.png></a>
