--- a/public/account/index.html
+++ b/public/account/index.html
@@ -100,8 +100,8 @@
 		pintrk('track', 'pagevisit');
 	</script>
 
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js" type="text/javascript"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 	<script>
@@ -127,7 +127,7 @@
 
 </head>
 
-<body ng-app="vibe" ng-controller="appCtrl">
+<body ng-app="vibe" ng-controller="appCtrl" ng-cloak>
 
 
 
@@ -233,8 +233,8 @@
 		pintrk('track', 'pagevisit');
 	</script>
 
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js" type="text/javascript"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 	<script>
@@ -260,7 +260,7 @@
 
 </head>
 
-<body ng-app="vibe" ng-controller="appCtrl">
+<body ng-app="vibe" ng-controller="appCtrl" ng-cloak>
 
 
 <div class="headerAccount">
@@ -270,7 +270,7 @@
     </div>
 
     <div class="header2">
-        <a class="logout" ng-click="logout()">Logout</a><br>
+        <a class="logout" href="" ng-click="logout()">Logout</a><br>
     </div>
 
 </div> 
