--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,8 @@
 		pintrk('track', 'pagevisit');
 	</script>
 
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js" type="text/javascript"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 	<script>
@@ -127,7 +127,7 @@
 
 </head>
 
-<body ng-app="vibe" ng-controller="appCtrl" >
+<body ng-app="vibe" ng-controller="appCtrl" ng-cloak>
 
 
 <div class="header">
