--- a/thank-you-confirmation.html
+++ b/thank-you-confirmation.html
@@ -28,41 +28,53 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="16x16" src=/img/favicon-16x16.png>
 
-	<!-- Facebook Pixel Code -->
-	<script>
-		! function (f, b, e, v, n, t, s) {
-			if (f.fbq) return;
-			n = f.fbq = function () {
-				n.callMethod ?
-					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-			};
-			if (!f._fbq) f._fbq = n;
-			n.push = n;
-			n.loaded = !0;
-			n.version = '2.0';
-			n.queue = [];
-			t = b.createElement(e);
-			t.async = !0;
-			t.src = v;
-			s = b.getElementsByTagName(e)[0];
-			s.parentNode.insertBefore(t, s)
-		}(window,
-			document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-		fbq('init', '365893380475713'); // Insert your pixel ID here.
-		fbq('track', 'PageView');
-		fbq('track', 'Lead');
+	<!-- Facebook Lead Pixel Code -->
+		<script>
+            ! function (f, b, e, v, n, t, s) {
+                if (f.fbq) return;
+                n = f.fbq = function () {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n;
+                n.push = n;
+                n.loaded = !0;
+                n.version = '2.0';
+                n.queue = [];
+                t = b.createElement(e);
+                t.async = !0;
+                t.src = v;
+                s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window,
+                document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '365893380475713'); // Insert your pixel ID here.
+            fbq('track', 'Lead');
+        </script>
+    
+        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"/></noscript>
+        <!-- DO NOT MODIFY -->
+        <!-- End Facebook Pixel Code -->
+
+
+	<!-- Start Taboola SignUp Pixel -->
+	<script type="text/javascript">
+		window._tfa = window._tfa || [];
+		_tfa.push({
+			notify: 'action',
+			name: 'SignUp'
+		});
 	</script>
+	<script src="//cdn.taboola.com/libtrc/taboolaaccount-hlvibeltdco/tfa.js"></script>
+	<!-- End Taboola -->
 
-	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"/></noscript>
-	<!-- DO NOT MODIFY -->
-	<!-- End Facebook Pixel Code -->
 
-	<!-- Start Pintrest Pixel -->
+	<!-- Start Pintrest SignUp Pixel -->
 	<script type="text/javascript">
 		! function (e) {
 			if (!window.pintrk) {
 				window.pintrk = function () {
-				window.pintrk.queue.push(Array.prototype.slice.call(arguments))
+					window.pintrk.queue.push(Array.prototype.slice.call(arguments))
 				};
 				var n = window.pintrk;
 				n.queue = [], n.version = "3.0";
@@ -81,10 +93,6 @@
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
 	</noscript>
 
-	<script>
-		pintrk('track', 'pagevisit');
-	</script>
-
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"/>
 	</noscript>
@@ -92,22 +100,11 @@
 	<script>
 		pintrk('track', 'signup');
 	</script>
-            
+
 	<noscript>
 		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=signup&noscript=1"/>
 	</noscript>
 	<!-- End Pintrest Pixel -->
-		
-	<!-- Start Taboola -->
-	<script type="text/javascript">
-		window._tfa = window._tfa || [];
-			_tfa.push({
-			notify: 'action',
-			name: 'SignUp'
-		});
-	</script>
-	<script src="//cdn.taboola.com/libtrc/taboolaaccount-hlvibeltdco/tfa.js"></script>
-	<!-- End Taboola -->
 	
 	<script>
 		$(document).ready(function () {
