--- a/subscription-confirmation.html
+++ b/subscription-confirmation.html
@@ -28,6 +28,72 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="16x16" src=/img/favicon-16x16.png>
 
+    <!-- Facebook Purchase Pixel Code -->
+    <script>
+        ! function (f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window,
+            document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '365893380475713'); // Insert your pixel ID here.
+        fbq('track', 'Purchase');
+    </script>
+
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"/></noscript>
+    <!-- DO NOT MODIFY -->
+    <!-- End Facebook Pixel Code -->
+
+
+    <!-- Start Pintrest Checkout Pixel -->
+    <script type="text/javascript">
+        ! function (e) {
+            if (!window.pintrk) {
+                window.pintrk = function () {
+                    window.pintrk.queue.push(Array.prototype.slice.call(arguments))
+                };
+                var n = window.pintrk;
+                n.queue = [], n.version = "3.0";
+                var t = document.createElement("script");
+                t.async = !0, t.src = e;
+                var r = document.getElementsByTagName("script")[0];
+                r.parentNode.insertBefore(t, r)
+            }
+        }("https://s.pinimg.com/ct/core.js");
+
+        pintrk('load', '2617160657516');
+        pintrk('page');
+    </script>
+
+    <noscript>
+        <img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
+    </noscript>
+
+    <noscript>
+        <img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
+        />
+    </noscript>
+
+    <script>
+        pintrk('track', 'checkout');
+    </script>
+
+    <noscript>
+        <img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=signup&noscript=1"/>
+    </noscript>
+    <!-- End Pintrest Pixel -->
 
     <script>
         $(document).ready(function () {
@@ -79,12 +145,6 @@
             });
         });
     </script>
-
-    <!-- Subscription Confirmation Pixel -->
-    <script>
-        fbq('track', 'Purchase');
-    </script>
-    <!-- End Subscription Confirmation -->
 
     <!-- Firebase App -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
