--- a/subscription.html
+++ b/subscription.html
@@ -113,23 +113,12 @@
 
 <body ng-app="vibe" ng-controller="appCtrl" ng-cloak>
     <div class="authHead">
-        <div class="header">
+        <div class="headerSub">
             <div class="headerCol1">
-                <a href="/">
-                    <img class="logo" src=/img/vlogo.png>
-                </a>
+                <a href="https://vibeltd.co/"><img class="logo" src={{ "/img/vlogo.png" | relURL }}></a>
             </div>
-    
-            <div class="headerCol2">
-                <a href="https://blog.vibeltd.co/" class="blog">Vibe Blog</a><br>
-                <div class="social-header">
-                    <a href="http://www.facebook.com/vibeltd"><img class="fb" src="/img/vfb.png"></a>
-                    <a href="http://www.twitter.com/vibeltd"><img class="twitter" src="/img/vtwitter.png"></a>
-                    <a href="http://www.instagram.com/vibeltd"><img class="insta" src="/img/vinsta.png"></a>
-                    <a href="https://www.pinterest.com/vibeltd/"><img class="pin" src="/img/vpin.png"></a>
-                </div>
-            </div>
-        </div>    
+            <div></div>
+        </div>
     </div>
 
     <div id="wufoo-z1un51nb0s6pks0">
