Updated index page to current Hugo changes
Minor change in language

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
             </div>
             <div class="whatBoxCol2">
                 <div class="whatTitle">CHOCOLATE</div>
-                <div class="whatText">Alluring dark chocolates, expertly sourced and produced in small batches by master chocolatiers.
-                    <BR> 2 bars
+                <div class="whatText">Alluring dark chocolates, expertly sourced and produced from bean to bar by master chocolatiers.
+            <BR> 2 bars
                 </div>
             </div>
         </div>
