Fixed broken logo image link in header on Subscription page

--- a/subscription.html
+++ b/subscription.html
@@ -115,7 +115,7 @@
     <div class="authHead">
         <div class="headerSub">
             <div class="headerCol1">
-                <a href="https://vibeltd.co/"><img class="logo" src={{ "/img/vlogo.png" | relURL }}></a>
+                <a href="https://vibeltd.co/"><img class="logo" src=/img/vlogo.png></a>
             </div>
             <div></div>
         </div>
